# swagger.json
@@ -225,6 +225,82 @@
                   }
               }
           }
+      },
+      "/signup":{
+        "post":{
+            "tags":[
+                "User"
+            ],
+            "description":"create a user",
+            "summary":"create a new user",
+            "parameters":[
+                {
+                    "name":"user data",
+                    "in":"body",
+                    "description":"user that we want to create",
+                    "schema":{
+                        "$ref":"#/definitions/User"
+                    }
+                }
+            ],
+            "produces":[
+                "application/json",
+                "application/xml"
+            ],
+            "responses":{
+                "201":{
+                    "description":"new user is created",
+                    "content":{
+                        "application/json":{
+                    "schema":{
+                        "$ref":"#/definitions/User"
+                    }
+                  }
+              }
+                },
+                "401":{
+                    "description":"some fields are missing"
+                }
+            }
+        }
+    },
+    "/login":{
+        "post":{
+            "tags":[
+                "User"
+            ],
+            "description":"Login a user",
+            "summary":"Login user",
+            "parameters":[
+                {
+                    "name":"user data",
+                    "in":"body",
+                    "description":"user that we want to login",
+                    "schema":{
+                        "$ref":"#/definitions/User"
+                    }
+                }
+            ],
+            "produces":[
+                "application/json",
+                "application/xml"
+            ],
+            "responses":{
+                "201":{
+                    "description":"Login successful",
+                    "content":{
+                        "application/json":{
+                    "schema":{
+                        "$ref":"#/definitions/User"
+                    }
+                  }
+              }
+                },
+                "401":{
+                    "description":"Login failed"
+                }
+            }
+        }
       }
     },
     "definitions": {
@@ -299,6 +375,28 @@
     "Rewards": {
         "type": "array",
         "$ref": "#/definitions/Reward"
+    },
+    "User": {
+        "type": "object",
+        "required": [
+            "email",
+            "password"
+        ],
+        "properties":{
+          "email":{
+              "type": "string"
+          },
+          "password":{
+              "type":"string"
+          },
+          "role":{
+               "type": "string"
+          },
+          "token":{
+              "type": "string"
+          }
+        }
     }
+
 }
 }
